2006-03-02  David Reveman  <davidr@novell.com>

	* plugins/cube.c (cubePaintTransformedScreen): Reset color.

	* plugins/switcher.c (switchPaintThumb): PAINT_WINDOW_TRANSLUCENT_MASK
	if opacity isn't opaque.
	(switchPaintWindow): Reset color.

2006-03-01  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.5.

	* plugins/fade.c (fadeAddDisplayModal): Higher brightness when showing
	display modal dialogs.

	* plugins/switcher.c (switchPreparePaintScreen): Continue adjusting
	window selection even though we're not grabbing the screen.
	(switchPaintWindow): Use last used paint attributes for thumbnails.
	(switchPaintWindow): Use blending when drawing selection rectangle.

	* plugins/fade.c (fadeHandleEvent): unmap. -> map.
	(fadeDamageWindowRect): Only zero opacity if we're not already
	fading the window.

	* src/window.c (unmapWindow): 'placed' variable should be reset on
	first call to unmapWindow.

	* src/screen.c:
	* src/event.c (handleEvent):
	* src/display.c (eventLoop):
	* include/compiz.h: Add slow animation option.

	* src/window.c (recalcNormalHints): Constrain window dimensions to
	max texture size.

	* src/screen.c (addScreen): Get max texture size.

	* gnome/window-decorator/gnome-window-decorator.c: Nicer drop shadow
	on windows without decorations.

	* src/window.c (addWindow): Move initialization of sync alarm.

	* plugins/cube.c:
	* plugins/decoration.c:
	(decorCreateDecoration): Fix minimum size check.

	* src/main.c:
	* include/compiz.h:
	* src/paint.c:
	* src/screen.c: Ligthing support.

	* compiz.pc.in: Fix.

2006-02-23  David Reveman  <davidr@novell.com>

	* src/window.c (unmapWindow): Not minimized and not part of showing
	desktop mode.

	* plugins/wobbly.c: Fix handling of scaled windows.
	Update options so that user gets more control over which windows
	that should wobble and when.

	* configure.ac: Bump version to 0.0.4.

	* gnome/window-decorator/gnome-window-decorator.c (window_opened): Make